--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sweetalert2/theme-dark": "^2.1.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "sweetalert2": "^8.17.1",
     "vue": "^2.6.10",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.3"
