--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "serve -s dist",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "standard"
   },
   "dependencies": {
     "@sweetalert2/theme-dark": "^2.1.0",
@@ -18,26 +18,12 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
+    "jest": "^24.9.0",
+    "serve": "^11.1.0",
+    "standard": "^14.2.0",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1"
   },
   "postcss": {
     "plugins": {
