--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
+    "@vue/babel-preset-jsx": "^1.1.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "jest": "^24.9.0",
@@ -26,12 +28,9 @@
     "vform": "^1.0.1",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
-    "vuex-persistedstate": "^2.5.4"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
+    "vuex-persistedstate": "^2.5.4",
+    "@vue/cli-plugin-typescript": "^3.11.0",
+    "typescript": "^3.4.3"
   },
   "browserslist": [
     "> 1%",
