--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "standard"
   },
   "dependencies": {
-    "@sweetalert2/theme-dark": "^2.1.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "sweetalert2": "^8.17.1",
@@ -21,16 +20,19 @@
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "@vue/babel-preset-jsx": "^1.1.0",
     "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-typescript": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "jest": "^24.9.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
     "serve": "^11.1.0",
     "standard": "^14.2.0",
+    "typescript": "^3.4.3",
     "vform": "^1.0.1",
+    "vue-sweetalert2": "^2.1.1",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
-    "vuex-persistedstate": "^2.5.4",
-    "@vue/cli-plugin-typescript": "^3.11.0",
-    "typescript": "^3.4.3"
+    "vuex-persistedstate": "^2.5.4"
   },
   "browserslist": [
     "> 1%",
