--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "watch": "vue-cli-service build --watch --mode development",
     "serve": "serve -s dist",
     "build": "vue-cli-service build",
-    "lint": "standard"
+    "lint": "standard",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "sweetalert2": "^8.17.1",
+    "sweetalert2": "^8.17.4",
     "vue": "^2.6.10",
     "vue-credit-card-field": "^0.3.14",
     "vue-progressbar": "^0.7.5",
@@ -23,11 +24,11 @@
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-typescript": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
-    "jest": "^24.9.0",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "serve": "^11.1.0",
-    "standard": "^14.3.0",
+    "standard": "^14.3.1",
     "typescript": "^3.4.3",
     "vue-sweetalert2": "^2.1.1",
     "vue-template-compiler": "^2.6.10",
@@ -37,5 +38,12 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "standard": {
+    "ignore": [
+      "node_modules",
+      "src/helpers/*",
+      "src/*.js"
+    ]
+  }
 }
