--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@vue/cli-plugin-typescript": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "serve": "^11.1.0",
     "standard": "^14.3.1",
     "typescript": "^3.4.3",
+    "vue-jest": "^3.0.5",
     "vue-sweetalert2": "^2.1.1",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
@@ -43,7 +46,14 @@
     "ignore": [
       "node_modules",
       "src/helpers/*",
+      "src/tests/*",
       "src/*.js"
     ]
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.vue$": "vue-jest",
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
